2009-12-01  Atsushi Enomoto  <atsushi@ximian.com>

	* Atom10ItemFormatter.cs, Atom10FeedFormatter.cs :
	  write extensions. Patch by Tom Philpot.

2009-10-16  Atsushi Enomoto  <atsushi@ximian.com>

	* Rss20FeedFormatter.cs, Rss20ItemFormatter.cs : handle other text
	  nodes than text (cdata, whitespaces etc.) and make sure to proceed
	  the reader when they are skipped. Fixed bug #546965 and #546959.

2009-10-07  Atsushi Enomoto  <atsushi@ximian.com>

	* SyndicationVersions.cs :
	  Handle atom feed as well. Patch by David Mitchell.

2009-10-07  Atsushi Enomoto  <atsushi@ximian.com>

	* SyndicationElementExtension.cs : give OuterName and OuterNamespace
	  for extensions with .ctor(XmlReader).

2009-10-05  Atsushi Enomoto  <atsushi@ximian.com>

	* Atom10FeedFormatter.cs : do not use Atom10ItemFormatter(item)
	  at ReadItem(). It is only for writing. Patch by David Mitchell.

2009-10-05  Atsushi Enomoto  <atsushi@ximian.com>

	* Atom10ItemFormatter.cs : enable XmlConvert.ToDateTimeOffset(),
	  patch by David Mitchell.

2009-09-15  Atsushi Enomoto  <atsushi@ximian.com>

	* SyndicationElementExtension.cs : make it ready for 2.1 build.

2009-09-07  Atsushi Enomoto  <atsushi@ximian.com>

	* Rss20FeedFormatter.cs, CategoriesDocument.cs,
	  AtomPub10ServiceDocumentFormatter_1.cs,
	  AtomPub10CategoriesDocumentFormatter.cs,
	  AtomPub10ServiceDocumentFormatter.cs : a couple of corcompare fixes.

2009-04-15  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceDocument.cs : remove Utility class. It is not precise
	  implementation to write extensions.
	* ServiceDocumentFormatter.cs : virtual extension writer methods
	  should call possibly overriden Write[Element/Attribute]Extensions()
	  in possibly derived document item classes.
	  Implemented LoadElementExtensions().
	* AtomPub10CategoriesDocumentFormatter.cs,
	  AtomPub10ServiceDocumentFormatter.cs : Implemented GetSchema().

2009-04-06  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceDocumentFormatter.cs
	  Workspace.cs